--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   ssmdb2_myadmin:
     image: phpmyadmin/phpmyadmin
     ports:
-      - '8080:80'
+      - '8088:80'
     links:
       - ssmdb2
     environment:
@@ -34,7 +34,7 @@ services:
     restart: always
     image: kvaps/mjpg-streamer
     devices:
-      - /dev/ttyp0
+      - /dev/video0
     ports:
       - 8090:8090
     command: -i "/usr/lib64/input_uvc.so -y -d /dev/video0 -r 320x240 -f 10" -o "/usr/lib64/output_http.so -p 8090 -w /usr/share/mjpeg-streamer/www/ -c admin:admin"
