--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     restart: always
     image: patsoffice/mjpg-streamer
     devices:
-      - /dev/video1
+      - /dev/video0:/dev/video0
     ports:
       - 8090:8080
 
