--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     image: patsoffice/mjpg-streamer
     devices:
       - /dev/video0:/dev/video0
+    environment: 
+      MJPEG_STREAMER_INPUT: '-y -n -r 1280x720'
     ports:
       - 8090:8080
 
