--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       MJPEG_STREAMER_INPUT: '-y -n -r 1280x720 -f 30 -yuv'
     ports:
       - 8090:8080
-    command: mjpg_streamer -i 'input_uvc.so -d /dev/video0 -f 30' -o 'output_http.so -w /usr/local/share/mjpg-streamer/www'
+    command: mjpg_streamer -i 'input_uvc.so -d /dev/video0 -r 1280x720 -f 30' -o 'output_http.so -w /usr/local/share/mjpg-streamer/www'
 
 # Names our volume
 volumes:
