--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '3.3'
 services:
   dockergui:
-    build: ./ui-for-docker
+    image: uifd/ui-for-docker
     privileged: true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - '9000:9000'
-    command: uifd/ui-for-docker
   ssmdb2:
     image: biarms/mysql:latest
     restart: always
