--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   www:
     image: nginx
-    port:
+    ports:
       - '80:80'
     volumes:
      - ./dashboard:/usr/share/nginx/html:ro
