--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.3'
 services:
   www:
-    image: nginx
+    image: httpd:latest
     ports:
       - '80:80'
     volumes:
-     - ./dashboard:/usr/share/nginx/html:ro
+     - ./dashboard:/usr/local/apache2/htdocs:ro
   dockergui:
     image: hypriot/rpi-dockerui
     privileged: true
