--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - ./cronmaster:/usr/local
     command: /usr/local/startup.sh
   stream0:
-    restart: unless-stopped
+    restart: always
     image: patsoffice/mjpg-streamer
     devices:
       - /dev/video0:/dev/video0
