--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
      - ./dashboard/my-httpd.conf:/usr/local/apache2/conf/httpd.conf:ro
   dockergui:
     restart: always
-    image: hypriot/rpi-dockerui
+    image: uifd/ui-for-docker
     privileged: true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
