--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   www:
     restart: always
-    image: httpd:latest
+    image: php:apache
     ports:
       - '80:80'
     volumes:
